[gd_scene load_steps=11 format=3 uid="uid://be52ogsgqsk2l"]

[ext_resource type="Script" uid="uid://bvbts5ohef5yk" path="res://Scenes/pause_menu.gd" id="1_inwkf"]
[ext_resource type="Shader" uid="uid://cs42yyqlqtaip" path="res://Scenes/Pause_Menu.gdshader" id="2_inwkf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_81e3q"]
shader = ExtResource("2_inwkf")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hckgo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c4tk2"]
bg_color = Color(0.243137, 0.243137, 0.243137, 0)
border_width_left = 80
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rmbjf"]
bg_color = Color(0.243137, 0.243137, 0.243137, 0)
border_width_left = 20
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hckgo"]
bg_color = Color(0.243137, 0.243137, 0.243137, 0)
border_width_left = 60
border_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_81e3q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_inwkf"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gsskx"]
_data = {
&"RESET": SubResource("Animation_81e3q"),
&"blur": SubResource("Animation_inwkf")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_inwkf")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_81e3q")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -74.0
offset_right = 235.0
offset_bottom = 126.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_top = 491.0
offset_right = 263.0
offset_bottom = 640.0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_hckgo")
theme_override_styles/hover = SubResource("StyleBoxFlat_c4tk2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rmbjf")
theme_override_styles/normal = SubResource("StyleBoxFlat_hckgo")
text = "Resume
"

[node name="Back to menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_hckgo")
theme_override_styles/hover = SubResource("StyleBoxFlat_c4tk2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rmbjf")
theme_override_styles/normal = SubResource("StyleBoxFlat_hckgo")
text = "Back to menu
"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_hckgo")
theme_override_styles/hover = SubResource("StyleBoxFlat_c4tk2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rmbjf")
theme_override_styles/normal = SubResource("StyleBoxFlat_hckgo")
text = "Exit
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gsskx")
}

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Back to menu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
